--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "express-php": "0.0.1",
     "nodemailer": "^4.6.7",
+    "octonode": "^0.9.2",
     "php-express": "0.0.3"
   }
 }
