--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bootstrap",
+  "name": "site-louis-gaspard",
   "version": "1.0.0",
-  "description": "",
+  "description": "personal website",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,10 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "express-php": "0.0.1",
-    "nodemailer": "^4.6.7",
-    "php-express": "0.0.3"
+    "express": "^4.16.3"
   }
 }
